examples/test/testpolicy15979.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15979
  namespace: namespace479
spec:
  podSelector:
    matchLabels:
      key13: value37
      key33: value9
      key36: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value13
          key16: value44
          key25: value26
